# functional-cpp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
example/: example.cc
include/fp/: base.hpp  either.hpp  fp.hpp  functor.hpp  maybe.hpp  monad.hpp  vector.hpp
script/: pre-install.sh  test.sh
test/: tests.cc
